--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,20 @@
   padding: 0;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   font: 400 1em/1.6 'Raleway', sans-serif;
   color: var(--text-color);
-  height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: var(--bg-color);
+}
+
+body.modal-open {
+  overflow: hidden;
 }
 
 p {
@@ -28,7 +35,6 @@ p {
 }
 
 header {
-  position: relative;
   background: var(--primary-color) url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='0.25'%3E%3Ccircle cx='3' cy='3' r='1'/%3E%3Ccircle cx='13' cy='13' r='1'/%3E%3C/g%3E%3C/svg%3E");
   color: var(--secondary-color);
   padding: 0.5rem 1rem;
@@ -77,7 +83,7 @@ main {
 }
 
 #route-name {
-  font: 600 1.2rem/1 'Raleway', sans-serif;
+  font: 600 0.9rem/1 sans-serif;
   color: var(--secondary-color);
   text-align: center;
   flex: 1;
@@ -94,16 +100,20 @@ main {
   inset: 0;
   z-index: 1000;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content {
   background-color: var(--bg-color);
-  margin: 10% auto;
   width: 80%;
   max-width: 600px;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  max-height: 90vh;
 }
 
 .modal-header {
@@ -122,6 +132,8 @@ main {
 
 .modal-body {
   padding: 20px;
+  overflow-y: auto;
+  max-height: calc(90vh - 50px); /* Adjust based on header/footer height */
 }
 
 .close {
@@ -138,21 +150,20 @@ main {
 @media (max-width: 768px) {
   .modal-content {
     width: 95%;
-    margin: 10% auto;
   }
 
   .logo a {
     font-size: 0.9rem;
   }
-  
+
   header {
     padding: 0.3rem 0.8rem;
   }
-  
+
   nav ul li {
     margin-left: 10px;
   }
-  
+
   nav ul li a {
     font-size: 0.8rem;
   }
